Updated entries to have Facebook and Twitter social networking link images. Input buttons now highlight via increased border contrast when hovered over. Fixed errors in desktop<->mobile stylesheet switcher script.

--- a/public/stylesheets/screen-mobile.css
+++ b/public/stylesheets/screen-mobile.css
@@ -213,6 +213,11 @@ article section {
 	padding: 9px;
 }
 
+article section img {
+	margin-right: 4px;
+	margin-top: 8px;
+}
+
 article section.links {
 	background-color: none;
 	border: none;
